Gradle: Bump Gradle version to 7.5 for Java 18 compatibility